fix department
