# backend/src/main/java/com/zl/mjga/controller/DepartmentController.java
@@ -3,7 +3,8 @@ package com.zl.mjga.controller;
 import com.zl.mjga.dto.PageRequestDto;
 import com.zl.mjga.dto.PageResponseDto;
 import com.zl.mjga.dto.department.DepartmentQueryDto;
-import com.zl.mjga.dto.department.DepartmentUpsertDto;
+import com.zl.mjga.dto.department.DepartmentRespDto;
+import com.zl.mjga.repository.DepartmentRepository;
 import com.zl.mjga.service.DepartmentService;
 import java.util.List;
 import lombok.RequiredArgsConstructor;
@@ -19,11 +20,12 @@ import org.springframework.web.bind.annotation.*;
 public class DepartmentController {
 
   private final DepartmentService departmentService;
+  private final DepartmentRepository departmentRepository;
 
   @PreAuthorize("hasAuthority(T(com.zl.mjga.model.urp.EPermission).READ_DEPARTMENT_PERMISSION)")
   @GetMapping("/page-query")
   @ResponseStatus(HttpStatus.OK)
-  PageResponseDto<List<Department>> pageQueryDepartments(
+  PageResponseDto<List<DepartmentRespDto>> pageQueryDepartments(
       @ModelAttribute PageRequestDto pageRequestDto,
       @ModelAttribute DepartmentQueryDto departmentQueryDto) {
     return departmentService.pageQueryDepartment(pageRequestDto, departmentQueryDto);
@@ -31,19 +33,19 @@ public class DepartmentController {
 
   @PreAuthorize("hasAuthority(T(com.zl.mjga.model.urp.EPermission).READ_DEPARTMENT_PERMISSION)")
   @GetMapping("/query")
-  List<Department> queryDepartments(DepartmentQueryDto departmentQueryDto) {
-    return departmentService.queryDepartment(departmentQueryDto);
+  List<Department> queryDepartments() {
+    return departmentRepository.findAll();
   }
 
   @PreAuthorize("hasAuthority(T(com.zl.mjga.model.urp.EPermission).WRITE_DEPARTMENT_PERMISSION)")
   @DeleteMapping()
   void deleteDepartment(@RequestParam Long id) {
-    departmentService.deleteDepartment(id);
+    departmentRepository.deleteById(id);
   }
 
   @PreAuthorize("hasAuthority(T(com.zl.mjga.model.urp.EPermission).WRITE_DEPARTMENT_PERMISSION)")
   @PostMapping()
-  void upsertDepartment(@RequestBody DepartmentUpsertDto departmentUpsertDto) {
-    departmentService.upsertDepartment(departmentUpsertDto);
+  void upsertDepartment(@RequestBody Department department) {
+    departmentRepository.merge(department);
   }
 }
